# open-battle-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  obsim  output.txt  reference.txt
src/: battle.cpp  battle.h  initializer.cpp  initializer.h  move.cpp  move.h  obsim.cpp  obsim.h  pokemon.cpp  pokemon.h  pokemonData.cpp  pokemonData.h  team.cpp  team.h  terminator.cpp  terminator.h
